--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="gallery-image-wrapper card">
                             <span class="gallery-badge text-danger"><i class="bi bi-x-circle-fill"></i></span>
-                            <img src="img/gallery-3.jpeg" class="img-fluid" alt="Contoh Iklan Jelek 2" loading="lazy">
+                            <img src="img/gallery-3.jpg" class="img-fluid" alt="Contoh Iklan Jelek 2" loading="lazy">
                         </div>
                         <h5 class="fw-bold mt-3">Masalah: Terlalu Umum</h5>
                         <p>"Jual Rumah Cepat" tidak memberi info apa-apa. Ini membuat semua orang (termasuk yang tidak niat) bertanya "Info dong?".</p>
@@ -987,7 +987,7 @@
                     <div class="col-md-6">
                         <div class="gallery-image-wrapper card">
                             <span class="gallery-badge text-success"><i class="bi bi-check-circle-fill"></i></span>
-                            <img src="img/gallery-1.jpeg" class="img-fluid" alt="Contoh Iklan Bagus 2" loading="lazy">
+                            <img src="img/gallery-1.jpg" class="img-fluid" alt="Contoh Iklan Bagus 2" loading="lazy">
                         </div>
                         <h5 class="fw-bold mt-3">Solusi: Edukasi di Awal</h5>
                         <p>Memberi edukasi di <em>copywriting</em> ("3 Hal yang Harus Disiapkan..."). Hanya yang <em>serius</em> dan mau membaca yang akan lanjut menghubungi Anda.</p>
